infras/k8s/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dv-notification-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dv-notification
  template:
    metadata:
      labels:
        app: dv-notification
    spec:
      containers:
        - name: dv-notification
          image: gcr.io/stevanoz-dv/dv-notification

---
apiVersion: v1
kind: Service
metadata:
  name: dv-notification-svc
spec:
  selector:
    app: dv-notification
  ports:
    - name: dv-notification
      protocol: TCP
      port: 8080
      targetPort: 8080
