infras/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dv-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - stevanoz.xyz
        - www.stevanoz.xyz
      secretName: stevanoz-xyz
  rules:
    - host: stevanoz.xyz
      http:
        paths:
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dv-user-svc
                port:
                  number: 8080
          - path: /api/notification/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dv-notification-svc
                port:
                  number: 8080

    - host: www.stevanoz.xyz
      http:
        paths:
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dv-user-svc
                port:
                  number: 8080
          - path: /api/notification/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dv-notification-svc
                port:
                  number: 8080
